--- a/stilus.css
+++ b/stilus.css
@@ -1,3 +1,12 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(36, 36, 36);
+  color: aliceblue;
+  text-align: center;
+}
+.bal {
+  text-align: left;
+}
 .fejlec {
   background-image: url(cicak_forras/images/hero.jpg);
   height: 100vh;
@@ -10,26 +19,19 @@
   padding: 10px;
 }
 .cim {
-  color: aliceblue;
   margin: 0 auto;
   width: 100%;
-  text-align: center;
 }
 .szoveg {
-  color: aliceblue;
   margin: 0 auto;
   width: 100%;
-  text-align: center;
 }
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+/* index.html menu*/
 .menu ul {
   list-style-type: none;
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  text-align: center;
   padding-top: 20px;
   border: 0px solid white;
   margin: 20px;
@@ -52,7 +54,7 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-/* kozepso */
+/* index.html kozepso link */
 
 .kozepsolink {
   margin: auto;
@@ -61,7 +63,6 @@ body {
 .kozepsolink ul {
   list-style-type: none;
   padding: 0;
-  text-align: center;
   padding-top: 20px;
   border: 0px solid white;
   margin: 20px;
@@ -82,4 +83,31 @@ body {
 }
 .kozepsolink li:hover {
   background-color: rgb(255, 255, 255);
+}
+
+/* cicak.html kepek */
+
+.kepek {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: auto;
+  gap: 40px;
+  position: relative;
+}
+.kepek img {
+  width: 100%;
+  border-image: 1px solid black;
+  border-radius: 20px;
+}
+.balalso{
+  position:absolute;
+  bottom: 6px;
+  left: 75px;
+  font-weight: bold;
+}
+.jobbalso{
+  position: absolute;
+  left:455px;
+  top: 310px;
+  font-weight: bold;
 }
