--- a/stilus.css
+++ b/stilus.css
@@ -74,7 +74,6 @@ body {
   background-color: rgb(243, 117, 0);
   padding: 15px;
   border-radius: 25px;
-  
 }
 #menu2 ul li a:hover {
   color: rgb(0, 0, 0);
@@ -124,7 +123,7 @@ body {
 }
 .kepek img {
   width: 100%;
-  border-image: 1px solid black;
+  border: 1px solid black;
   border-radius: 20px;
 }
 .balalso {
@@ -138,4 +137,87 @@ body {
   left: 455px;
   top: 310px;
   font-weight: bold;
+}
+.panel {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+  text-align: left;
+}
+.panel1 {
+  padding-left: 15px;
+  background-color: aliceblue;
+  border-radius: 20px;
+  color: rgb(36, 36, 36);
+}
+.panel2 {
+  padding-left: 15px;
+  background-color: rgb(36, 36, 36);
+  border: 3px solid gray;
+  border-radius: 20px;
+}
+.menu3 ul {
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-top: 20px;
+  border: 0px solid white;
+  margin: 20px;
+  border-radius: 15px;
+  gap: 20px;
+}
+.menu3 ul li a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+.menu3 li {
+  background-color: rgb(243, 117, 0);
+  padding: 15px;
+  border-radius: 25px;
+}
+.menu3 ul li a:hover {
+  color: rgb(0, 0, 0);
+}
+.menu3 li:hover {
+  background-color: rgb(255, 255, 255);
+}
+.kiskep {
+  max-width: 35%;
+  height: auto;
+  float: left;
+  margin-top: 10px;
+}
+.torol {
+  clear: both;
+}
+.menu4 ul {
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-top: 20px;
+  border: 0px solid white;
+  margin: 20px;
+  border-radius: 15px;
+  gap: 20px;
+}
+.menu4 ul li a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+.menu4 li {
+  background-color: rgb(36, 36, 36);
+  padding: 15px;
+  border: 3px solid rgb(243, 117, 0);
+  border-radius: 25px;
+}
+.menu4 ul li a:hover {
+  color: rgb(0, 0, 0);
+}
+.menu4 li:hover {
+  background-color: rgb(255, 255, 255);
 }
